# -crowdcomms-django

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
analytics/: tests.py
bunnies/: models.py  permissions.py  serializers.py  tests.py  views.py
bunnies/migrations/: 0003_auto_20230423_0913.py
crowdcomms_code_test/: settings.py  settings_local.py  urls.py
foxes/: apps.py  models.py  permissions.py  serializers.py  tests.py  views.py
foxes/migrations/: 0001_initial.py
